# distributed-self-play

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: distributed-self-play.tex
examples/: demo.py
src/: __init__.py  actor.py  cli.py  communication.py  evaluator.py  learner.py  mcts.py  model_version.py  network.py  replay_buffer.py
src/games/: __init__.py  connect4.py  game_base.py  othello.py
src/viz/: __init__.py  app.py
tests/: test_actor.py  test_games.py  test_learner.py  test_replay_buffer.py
